symengine/:
[  8%] Built target teuchos
Scanning dependencies of target symengine
[  9%] Building CXX object symengine/CMakeFiles/symengine.dir/polynomial.cpp.o
/Users/Charles/symengine/symengine/polynomial.cpp:198:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
1 warning generated.
[ 10%] Building CXX object symengine/CMakeFiles/symengine.dir/series.cpp.o
[ 12%] Building CXX object symengine/CMakeFiles/symengine.dir/series_generic.cpp.o
/Users/Charles/symengine/symengine/series_generic.cpp:81:33: error: no member named 'first' in 'SymEngine::Integer'
            mpq_class cl_rat(fc.first.get_mpq_view());
                             ~~ ^
/Users/Charles/symengine/symengine/series_generic.cpp:157:24: error: out-of-line definition of 'is_canonical' does not match any declaration in 'SymEngine::UnivariateSeries'
bool UnivariateSeries::is_canonical(const UnivariatePolynomial& poly, const unsigned int &prec) const
                       ^~~~~~~~~~~~
In file included from /Users/Charles/symengine/symengine/series_generic.cpp:2:
In file included from /Users/Charles/symengine/symengine/series_generic.h:14:
/Users/Charles/symengine/symengine/series.h:34:63: warning: field 'p_' will be initialized after field 'var_' [-Wreorder]
    inline SeriesBase(Poly p, std::string var, long degree) : p_(std::move(p)), var_(var), degree_(degree) {
                                                              ^
/Users/Charles/symengine/symengine/series_generic.cpp:12:5: note: in instantiation of member function 'SymEngine::SeriesBase<SymEngine::Expression, SymEngine::Expression, SymEngine::UnivariateSeries>::SeriesBase' requested here
    SeriesBase(std::move(sp), varname, degree) {
    ^
1 warning and 2 errors generated.
make[2]: *** [symengine/CMakeFiles/symengine.dir/series_generic.cpp.o] Error 1
make[1]: *** [symengine/CMakeFiles/symengine.dir/all] Error 2
make: *** [all] Error 2
